--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
-        
+
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
+        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -24,4 +26,28 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'androidutillib'
+
+    publishedGroupId = 'jfrog-xuqi-org'
+    libraryName = 'androidutillib'
+    artifact = 'androidutillib'
+
+    libraryDescription = 'This xuqi personal practice android maven lib demo.'
+
+    siteUrl = 'https://github.com/Kirito0512/AndroidMavenLib'
+    gitUrl = 'https://github.com/Kirito0512/AndroidMavenLib.git'
+
+    libraryVersion = '1.0.0'
+
+    developerId = 'kirito0512'
+    developerName = 'kirito0512'
+    developerEmail = 'xuqi19950424@gmail.com'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+    allLicenses = ["Apache-2.0"]
 }
