添加对bintray的仓库的引用

--- a/androidutillib/build.gradle
+++ b/androidutillib/build.gradle
@@ -72,22 +72,23 @@ install {
     }
 }
 
-//Properties properties = new Properties()
-//properties.load(project.rootProject.file('local.properties').newDataInputStream())
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
 
 bintray {
-    user = "kirito0512"
-    key = "a0dce5d1d5924db50505c916cd499ce13826cb10"
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.key")
     configurations = ['archives']
     pkg {
-        repo = "maven"  //发布到Bintray的那个仓库里，默认账户有四个库，我们这里上传到maven库
-        // 一定要写
+        // 组织名，我自己的这种情况是一定要写，插件的github主页有如下描述
         // userOrg – an optional organization name when the repo belongs to one of the user's orgs.
         // If not added will use 'BINTRAY_USER' by default
         // 我的maven仓库现在位于自己的org下，如果这里不写
         // 会报错 [message:Repo 'maven' was not found] 找了很久都不知道为啥
         // 最后跟另一个自己的成功的demo对比，才发现少了这个
         userOrg = rootProject.userOrg
+        // 发布到Bintray的具体的仓库名
+        repo = rootProject.bintrayRepo
         name = rootProject.bintrayName
         desc = rootProject.libraryDescription
         websiteUrl = rootProject.siteUrl
