--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,10 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
+        maven {
+            url 'https://dl.bintray.com/jfrog-xuqi-org/maven'
+        }
     }
 }
 
@@ -42,7 +45,7 @@ ext {
     siteUrl = 'https://github.com/Kirito0512/AndroidMavenLib'
     gitUrl = 'https://github.com/Kirito0512/AndroidMavenLib.git'
 
-    libraryVersion = '1.0.1'
+    libraryVersion = '1.0.2'
 
     developerId = 'kirito0512'
     developerName = 'kirito0512'
