add to jcenter success
加入jcenter成功后，可以移除这部分代码了

--- a/build.gradle
+++ b/build.gradle
@@ -21,9 +21,9 @@ allprojects {
         google()
         jcenter()
 
-        maven {
-            url 'https://dl.bintray.com/jfrog-xuqi-org/maven'
-        }
+//        maven {
+//            url 'https://dl.bintray.com/jfrog-xuqi-org/maven'
+//        }
     }
 }
 
